# syntheticopenschema.org

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
docs/: CNAME  examples.md  getting-started.md  implementations.md  index.md
docs/specification/: index.md
examples/: index.html
getting-started/: index.html
implementations/: index.html
search/: search_index.json
specification/: index.html
specification/browser-v1/_index/: index.html
specification/browser-v1/common/: index.html
specification/browser-v1/load_check/: index.html
specification/browser-v1/scripted_check/: index.html
specification/policy/compatibility/: index.html
specification/policy/glossary/: index.html
specification/policy/versioning/: index.html
specification/v1/_index/: index.html
specification/v1/check/: index.html
specification/v1/common/: index.html
specification/v1/dns/: index.html
specification/v1/domain/: index.html
specification/v1/http/: index.html
specification/v1/tcp/: index.html
specification/v1/tls/: index.html
